syntax = "proto3";

option go_package = "helloworld/helloworld";
package helloworld;

service GreetingMessage {
    rpc SayHello(helloworldRequest) returns (helloworldResponse) {}
}

message helloworldRequest {
    string name = 1;
}

message helloworldResponse {
    string message = 2;
 }

































































































































































